# Chip8-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: CMakeLists.txt  chip8.c  chip8.h  main.c  opcode.c  sdl.c  sdl.h
